Updated sizes to fit available space + fix chrome scrollbar bug

--- a/src/App/Content/Tiles/FollowedChannelsTile/FollowedChannelsTile.module.sass
+++ b/src/App/Content/Tiles/FollowedChannelsTile/FollowedChannelsTile.module.sass
@@ -1,7 +1,7 @@
 @import '../../../../variables'
 
 .notification
-  width: 170px
+  width: calc(50% - 7px)
   margin-left: 2px
   margin-right: 2px
   margin-bottom: 5px
