--- a/src/App/Content/Tiles/LivestreamTile/LivestreamTile.module.sass
+++ b/src/App/Content/Tiles/LivestreamTile/LivestreamTile.module.sass
@@ -33,7 +33,7 @@
 
   .rightPart
     position: absolute
-    width: 225px
+    width: calc(100% - 119px)
     height: 100%
     top: 0
     right: 0
